# telegram-dl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
telegram_dl/: __init__.py  cli.py  client.py  exceptions.py  models.py  patterns.py
telegram_dl.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_telegram_dl.py
