[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-dl"
version = "1.0.0"
description = "Download videos from Telegram channels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "KD", email = "kd@example.com"}
]
keywords = ["telegram", "download", "video", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "telethon>=1.35.0",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff"]

[project.scripts]
telegram-dl = "telegram_dl.cli:main"

[project.urls]
Homepage = "https://github.com/kuldeep27396/telegram-dl"
Repository = "https://github.com/kuldeep27396/telegram-dl"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram_dl*"]

[tool.setuptools.package-data]
telegram_dl = ["py.typed"]
