[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-dl"
version = "2.0.1"
description = "A production-ready Python CLI tool to download videos from Telegram channels"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "KD", email = "kd@example.com"}
]
keywords = ["telegram", "download", "video", "cli", "pydantic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "telethon>=1.35.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
    "tqdm>=4.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov", "black", "ruff", "mypy"]

[project.scripts]
telegram-dl = "telegram_dl.cli:main"

[project.urls]
Homepage = "https://github.com/kuldeep27396/telegram-dl"
Repository = "https://github.com/kuldeep27396/telegram-dl"
Issues = "https://github.com/kuldeep27396/telegram-dl/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["telegram_dl*"]

[tool.setuptools.package-data]
telegram_dl = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
